--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -48,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Kobayashi"
+CONFIG_LOCALVERSION="-radxmiui"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -1786,12 +1786,12 @@ CONFIG_MTK_SCHED_INTEROP=y
 #
 # MTK Energy Aware Scheduler Plus
 #
-# CONFIG_MTK_SCHED_EAS_POWER_SUPPORT is not set
+CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
 
 #
 # MTK Heterogenous MultiProcessor Scheduler
 #
-CONFIG_SCHED_HMP=y
+# CONFIG_SCHED_HMP is not set
 CONFIG_SCHED_HMP_PRIO_FILTER=y
 CONFIG_SCHED_HMP_PRIO_FILTER_VAL=5
 # CONFIG_HMP_FREQUENCY_INVARIANT_SCALE is not set
