--- a/arch/arm64/configs/rad_defconfig
+++ b/arch/arm64/configs/rad_defconfig
@@ -1,5 +1,6 @@
 # CONFIG_FHANDLE is not set
-CONFIG_IKHEADERS=y
+CONFIG_LOCALVERSION="-Blank-Space[rad]"
+CONFIG_KPROBES=y
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_GROUPS_COUNT=32
@@ -464,7 +465,6 @@ CONFIG_MICROTRUST_DELAY_KEY=y
 CONFIG_MTK_LIGHTSECONDARY_HUB=y
 CONFIG_MI_MEMORY_SYSFS=y
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_LOCALVERSION="-rad"
 CONFIG_SIMTRAY_STATUS=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DISCARD=y
