--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -14,6 +14,8 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
 CONFIG_SYSCTL_SYSCALL=y
+CONFIG_KALLSYMS=y
+CONFIG_KALLSYMS_ALL=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
@@ -40,10 +42,13 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_MTK=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_XFRM_MIGRATE=y
 CONFIG_SYN_COOKIES=y
 CONFIG_BRIDGE=y
@@ -176,11 +181,11 @@ CONFIG_MTK_PWM=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
 CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
-# CONFIG_SCHED_HMP is not set
-# CONFIG_MTK_SCHED_BOOST is not set
+CONFIG_SCHED_HMP=y
+CONFIG_MTK_SCHED_BOOST=y
 # CONFIG_MTK_SCHED_RQAVG_KS is not set
 # CONFIG_MTK_SCHED_RQAVG_US is not set
-# CONFIG_MTK_SCHED_CPULOAD is not set
+# CONFIG_MTK_SCHED_CPULOAD=y
 CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT=y
 CONFIG_MTK_AUDIODSP_SUPPORT=y
 CONFIG_MTK_RAM_CONSOLE=y
@@ -272,7 +277,7 @@ CONFIG_SPI_MT65XX=y
 CONFIG_MTK_GAUGE_VERSION=30
 CONFIG_MTK_CHARGER=y
 CONFIG_MTK_KERNEL_POWER_OFF_CHARGING=y
-# CONFIG_HWMON is not set
+# CONFIG_HWMON=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_DEFAULT_GOV_BACKWARD_COMPATIBLE=y
 CONFIG_WATCHDOG=y
@@ -455,7 +460,7 @@ CONFIG_MICROTRUST_DELAY_KEY=y
 CONFIG_MTK_LIGHTSECONDARY_HUB=y
 CONFIG_MI_MEMORY_SYSFS=y
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-BUGGY"
 CONFIG_SIMTRAY_STATUS=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DISCARD=y
