--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -180,12 +180,16 @@ CONFIG_MTK_LEDS=y
 CONFIG_MTK_PWM=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
-CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
+# CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
 CONFIG_SCHED_HMP=y
+CONFIG_SCHED_HMP_PRIO_FILTER=y
+CONFIG_SCHED_HMP_PRIO_FILTER_VAL=5
+# CONFIG_HMP_FREQUENCY_INVARIANT_SCALE is not set
+CONFIG_SCHED_HMP_PLUS=y
 CONFIG_MTK_SCHED_BOOST=y
 # CONFIG_MTK_SCHED_RQAVG_KS is not set
 # CONFIG_MTK_SCHED_RQAVG_US is not set
-# CONFIG_MTK_SCHED_CPULOAD=y
+CONFIG_MTK_SCHED_CPULOAD=y
 CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT=y
 CONFIG_MTK_AUDIODSP_SUPPORT=y
 CONFIG_MTK_RAM_CONSOLE=y
@@ -277,7 +281,7 @@ CONFIG_SPI_MT65XX=y
 CONFIG_MTK_GAUGE_VERSION=30
 CONFIG_MTK_CHARGER=y
 CONFIG_MTK_KERNEL_POWER_OFF_CHARGING=y
-# CONFIG_HWMON=y
+CONFIG_HWMON=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_DEFAULT_GOV_BACKWARD_COMPATIBLE=y
 CONFIG_WATCHDOG=y
