--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -7,7 +7,8 @@ CONFIG_UCLAMP_MAP_OPP=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CPUSETS=y
 CONFIG_SCHED_TUNE=y
-CONFIG_DEFAULT_USE_ENERGY_AWARE=y
+# CONFIG_DEFAULT_USE_ENERGY_AWARE=y
+CONFIG_DEFAULT_IDLE_BALANCE_ENHANCEMEN=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
@@ -40,6 +41,9 @@ CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/rosemary"
 CONFIG_COMPAT=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_GOV_ATTR_SET=y
+CONFIG_CPU_FREQ_GOV_COMMON=y
+CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_MTK=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
@@ -60,6 +64,7 @@ CONFIG_CFG80211=y
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_ZRAM=y
+# CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6785"
@@ -180,15 +185,18 @@ CONFIG_MTK_LEDS=y
 CONFIG_MTK_PWM=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
-# CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
+CONFIG_MTK_SCHED_INTEROP=y
+# CONFIG_MTK_SCHED_TRACE is not set
+CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
+CONFIG_MTK_SCHED_MULTI_GEARS=y
 CONFIG_SCHED_HMP=y
 CONFIG_SCHED_HMP_PRIO_FILTER=y
 CONFIG_SCHED_HMP_PRIO_FILTER_VAL=5
 # CONFIG_HMP_FREQUENCY_INVARIANT_SCALE is not set
 CONFIG_SCHED_HMP_PLUS=y
 CONFIG_MTK_SCHED_BOOST=y
-# CONFIG_MTK_SCHED_RQAVG_KS is not set
-# CONFIG_MTK_SCHED_RQAVG_US is not set
+CONFIG_MTK_SCHED_RQAVG_KS=y
+CONFIG_MTK_SCHED_RQAVG_US=y
 CONFIG_MTK_SCHED_CPULOAD=y
 CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT=y
 CONFIG_MTK_AUDIODSP_SUPPORT=y
@@ -501,3 +509,38 @@ CONFIG_HAVE_DEBUG_KMEMLEAK=n
 CONFIG_MTK_MMC_DEBUG=n
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
+
+# DEVFREQ Governors
+#
+CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
+CONFIG_DEVFREQ_GOV_PERFORMANCE=y
+CONFIG_DEVFREQ_GOV_POWERSAVE=y
+# CONFIG_DEVFREQ_GOV_USERSPACE is not set
+# CONFIG_DEVFREQ_GOV_PASSIVE is not set
+
+#
+# Performance, Power, and Thermal
+#
+# CONFIG_MTK_PERF_TRACKER is not set
+# CONFIG_MTK_LOWMEM_HINT is not set
+CONFIG_MTK_TASK_TURBO=y
+
+#
+# ARM CPU Idle Drivers
+#
+# CONFIG_ARM_CPUIDLE is not set
+CONFIG_ARM_MTK_CPUIDLE=y
+# CONFIG_ARM_MTK_81XX_CPUIDLE is not set
+# CONFIG_ARM_MTK_NEW_ARCH_CPUIDLE is not set
+# CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
+
+#
+# CPU Idle
+#
+CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
+# CONFIG_CPU_IDLE_GOV_LADDER is not set
+CONFIG_CPU_IDLE_GOV_MENU=y
+# CONFIG_CPU_IDLE_GOV_MTK is not set
+CONFIG_CPU_IDLE_GOV_MTK_MENU=y
+# CONFIG_CPU_IDLE_NO_MTK is not set
