--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -197,9 +197,9 @@ CONFIG_SCHED_HMP_PRIO_FILTER_VAL=5
 # CONFIG_HMP_FREQUENCY_INVARIANT_SCALE is not set
 CONFIG_SCHED_HMP_PLUS=y
 CONFIG_MTK_SCHED_BOOST=y
-CONFIG_MTK_SCHED_RQAVG_KS=y
-CONFIG_MTK_SCHED_RQAVG_US=y
-CONFIG_MTK_SCHED_CPULOAD=y
+# CONFIG_MTK_SCHED_RQAVG_KS=y
+# CONFIG_MTK_SCHED_RQAVG_US=y
+# CONFIG_MTK_SCHED_CPULOAD=y
 CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT=y
 CONFIG_MTK_AUDIODSP_SUPPORT=y
 CONFIG_MTK_RAM_CONSOLE=y
