--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -7,14 +7,12 @@ CONFIG_UCLAMP_MAP_OPP=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CPUSETS=y
 CONFIG_SCHED_TUNE=y
-# CONFIG_DEFAULT_USE_ENERGY_AWARE=y
-CONFIG_SCHED_EAS=y
-CONFIG_DEFAULT_IDLE_BALANCE_ENHANCEMENT=y
+CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-# CONFIG_RD_LZ4 is not set
+CONFIG_RD_LZ4=y
 CONFIG_SYSCTL_SYSCALL=y
 CONFIG_KALLSYMS=y
 CONFIG_KALLSYMS_ALL=y
