--- a/arch/arm64/configs/rosemary_defconfig
+++ b/arch/arm64/configs/rosemary_defconfig
@@ -22,7 +22,7 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_RD_LZ4=y
 CONFIG_SYSCTL_SYSCALL=y
 CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=y
+# CONFIG_KALLSYMS_ALL=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
